<resources>
    <string name="app_name">ChatApp</string>
    <string name="Rigister">Register</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Email">Email</string>
    <string name="Logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TypeMessage">Type Message</string>

    <string name="message">message</string>
    <string name="friends">Friends</string>
    <string name="Block">Block</string>
    <string name="UnBlock">Unblock</string>
    <string name="Groupname">Group name</string>
    <string name="AddGroup">Add Group</string>
    <string name="messagetime">message time</string>
    <string name="Leave">Leave</string>
    <string name="members">Members</string>
    <string name="Groupinfo">Group info</string>
    <string name="Lastmessage">Last message</string>
    <string name="isseen">is seen</string>
    <string name="EditGroup">Edit Group</string>
    <string name="AddToGroup">Add To Group</string>
    <string name="dialog_text">All your friends are already in the group</string>
</resources>
